log/build_2024-05-06_13-10-57/leg_dector/stderr.log
  File "/home/airlab/Desktop/project_ws/install/leg_dector/lib/python3.8/site-packages/leg_dector/leg_detection.py", line 36
    self.clear_arrows(msg.header.frame_id)s
                                          ^
SyntaxError: invalid syntax

